Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Tue Dec 27 06:09:03 1994  Richard Basch  (probe@tardis)

	* configure.in:
	combined KRB5_UTPID, KRB5_UTTYPE, and KRB5_UTHOST
	into CHECK_UTMP macro (and added additional checks)

Fri Nov 18 01:08:39 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use new macros KRB5_UTPID, KRB5_UTTYPE, and
	KRB5_UTHOST (from epeisach).

Wed Oct 19 12:18:26 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Look for man page in the source directory.

Fri Sep 30 22:30:21 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kpasswd.c: Add placeholders for magic numbers

Thu Sep 29 22:40:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: relink executable if libraries change

Tue Aug  9 21:42:02 1994  Tom Yu  (tlyu@dragons-lair)

	* networked.c: yet another utent fix

Sat Jul 16 02:51:25 1994  Tom Yu  (tlyu at dragons-lair)

	* kpasswd.c (get_first_ticket): fix error codes
