@@ -78,15 +78,6 @@ krb5_creds my_creds;
 
 extern char *krb5_default_pwd_prompt1;
 
-/*
- * Try no preauthentication first; then try the encrypted timestamp
- */
-int preauth_search_list[] = {
-	0,			
-	KRB5_PADATA_ENC_TIMESTAMP,
-	-1
-	};
-
 main(argc,argv)
   int argc;
   char *argv[];
@@ -638,23 +629,11 @@ get_first_ticket(context, cache, client)
 	return(1);
     }
 
-/*	Build Request for Initial Credentials */
-    for (i=0; preauth_search_list[i] >= 0; i++) {
-	retval = krb5_get_in_tkt_with_password(context, 
-					0,	/* options */
-					my_addresses,
-					/* do random preauth */
-                                        preauth_search_list[i],
-					ETYPE_DES_CBC_CRC,   /* etype */
-					KEYTYPE_DES,
-					old_password,
-					cache,
-					&my_creds,
-				        0);
-	if (retval != KRB5KDC_ERR_PREAUTH_FAILED &&
-	    retval != KRB5KRB_ERR_GENERIC)
-	    break;
-    }
+    retval = krb5_get_in_tkt_with_password(context, 0,/* options */
+					my_addresses, 
+					NULL, /* Default encryption list */
+                                        NULL, /* Default preauth list */
+					old_password, cache, &my_creds, 0);
 	
     if (retval) {
 	fprintf(stderr, "\nUnable to Get Initial Credentials : %s %d\n",
